# nativetask

./: .gitignore  INSTALL  License_dependances.md  README.md  TODOS.md  build.xml  installation_guide.txt  pom.xml
core/: pom.xml
core/src/: CMakeLists.txt
core/src/main/native/: Makefile.am  Makefile.in  build  build.sh  configure.ac
core/src/test/resources/: kvtest-conf.xml  kvtest-pig-conf.xml
docs/: hadoop1.0.3-nativetask deployment.md  how_to_develop_customized_mapper_reducer_in_native_task.md  how_to_enable_native_output_collector.md  how_to_support_custom_map_output_key_type.md  how_to_test_facebook_collector.md  how_to_test_native_output_collector.md  steps_to_test_native_output_collector.md
patch/: hadoop-1.patch  hadoop-2.patch  nativetask-branch-1.patch  pig.patch
patch/hadoop1.03_with_native_task_patched/: .classpath  .gitignore  .project  Steps to test native task.md  build.xml  how_to_use_this_to_test_native_task.md
patch/hadoop1.03_with_native_task_patched/conf/: test-kv-conf.xml  test-kv-normal-conf.xml
patch/hadoop1.03_with_native_task_patched/scenariotest/: README.md  build.xml  native_task_test_report.md
patch/hadoop1.03_with_native_task_patched/scenariotest/conf/: common_conf.xml  core-site.xml  hadoop-env.sh  hdfs-site.xml  kvtest-conf.xml  mapred-site.xml  test-combiner-conf.xml  test-compress-conf.xml  test-kv-conf.xml
patch/hadoop1.03_with_native_task_patched/src/contrib/: build-contrib.xml  build.xml
patch/hadoop1.03_with_native_task_patched/src/contrib/nativetask/src/main/native/: .cproject  .project  Makefile.am  Makefile.in  build.sh  configure  configure.ac
patch/hadoop1.03_with_native_task_patched/src/contrib/nativetask/src/main/native/examples/: Streaming.cc
patch/hadoop1.03_with_native_task_patched/src/contrib/nativetask/src/main/native/src/: NativeTask.h
patch/hadoop1.03_with_native_task_patched/src/contrib/nativetask/src/main/native/src/codec/: BlockCodec.cc  BlockCodec.h  GzipCodec.cc  Lz4Codec.cc  SnappyCodec.cc
patch/hadoop1.03_with_native_task_patched/src/contrib/nativetask/src/main/native/src/handler/: BatchHandler.cc  CombineHandler.cc  CombineHandler.h  MCollectorOutputHandler.cc  MMapTaskHandler.cc  MMapTaskHandler.h  MMapperHandler.cc  MMapperHandler.h  RReducerHandler.cc  RReducerHandler.h
patch/hadoop1.03_with_native_task_patched/src/contrib/nativetask/src/main/native/src/lib/: BufferStream.cc  FileSystem.cc  IFile.cc  IFile.h  KVFile.cc  KVFile.h  LineRecordReader.cc  MapOutputCollector.cc  MapOutputCollector.h  MapOutputSpec.cc  MapOutputSpec.h  MemoryBlock.h  Merge.cc  Merge.h  NativeLibrary.cc  NativeLibrary.h  NativeObjectFactory.cc  NativeObjectFactory.h  NativeRuntimeJniImpl.cc  NativeTask.cc  PartitionIndex.cc  PartitionIndex.h  SpillInfo.cc  SpillInfo.h  Streams.h  TaskCounters.cc  TotalOrderPartitioner.cc  TotalOrderPartitioner.h  WordCount.cc  WordCount.h  combiner.cc  combiner.h  commons.h  heap.h  mempool.cc  mempool.h  org_apache_hadoop_mapred_nativetask_NativeRuntime.h  primitives.h
patch/hadoop1.03_with_native_task_patched/src/contrib/nativetask/src/main/native/src/util/: Checksum.cc  Checksum.h  DualPivotQuickSort.h  Process.cc  Random.cc  Random.h  SyncUtils.cc  SyncUtils.h  WritableUtils.cc  WritableUtils.h
patch/hadoop1.03_with_native_task_patched/src/contrib/nativetask/src/main/native/test/: TestCompressions.cc  TestIFile.cc  TestMain.cc  TestPrimitives.cc  TestSort.cc
patch/hadoop1.03_with_native_task_patched/src/contrib/nativetask/src/main/native/test/handler/: TestMMapTaskHandler.cc  TestRReducerHandler.cc
patch/hadoop1.03_with_native_task_patched/src/contrib/nativetask/src/main/native/test/lib/: TestCombiner.cc  TestTotalOrderPartitioner.cc
patch/hadoop1.03_with_native_task_patched/src/contrib/nativetask/src/main/native/test/util/: TestSyncUtils.cc
scenariotest/: README.md  build.xml  native_task_test_design.md  testconf.xml
sdk/example/CustomModule/: build.xml
src/: CMakeLists.txt
src/main/native/: .cproject  .project  Makefile.am  Makefile.in  build.sh  configure  java  quickbuild-linux.sh
src/main/native/examples/: Streaming.cc
src/main/native/src/: FileSystem.cc  MapOutputSpec.cc  NativeObjectFactory.cc  NativeTask.h  mempool.h
src/main/native/src/codec/: SnappyCodec.cc
src/main/native/src/handler/: BatchHandler.cc  BatchHandler.h  MCollectorOutputHandler.cc  MCollectorOutputHandler.h  MMapTaskHandler.cc  MMapTaskHandler.h  MMapperHandler.cc  MMapperHandler.h  RReducerHandler.cc  RReducerHandler.h  org_apache_hadoop_mapred_nativetask_NativeBatchProcessor.h
src/main/native/src/lib/: Compressions.cc  FileSplit.cc  FileSplit.h  FileSystem.cc  FileSystem.h  KVFile.cc  KVFile.h  LineRecordReader.cc  LineRecordReader.h  LineRecordWriter.cc  LineRecordWriter.h  MapOutputCollector.cc  Merge.h  NativeLibrary.cc  NativeObjectFactory.cc  NativeObjectFactory.cc.bak  NativeRuntimeJniImpl.cc  PartitionBucket.cc  PartitionBucketIterator.cc  TeraSort.cc  TeraSort.h  TotalOrderPartitioner.cc  TotalOrderPartitioner.cc.bak  TotalOrderPartitioner.h  WordCount.cc  WordCount.h  mempool.h  mempool.h.bak  org_apache_hadoop_mapred_nativetask_NativeRuntime.h
src/main/native/src/util/: PigUtils.cc  PigUtils.h  Process.cc  Process.h  WritableUtils.cc
src/main/native/test/: TestBuffer.cc  TestCompressions.cc  TestIFile.cc  TestInputSplit.cc  TestMain.cc  TestSort.cc  test_commons.cc
src/main/native/test/handler/: TestBatchHandler.cc  TestCombineHandler.cc  TestMCollectorOutputHandler.cc  TestMMapTaskHandler.cc  TestMMapperHandler.cc  TestRReducerHandler.cc
src/main/native/test/lib/: TestCombineRunner.cc  TestDynamicBuffer.cc  TestHeap.cc  TestLineRecordReader.cc  TestLineRecordWriter.cc  TestMapOutputCollector.cc  TestMapOutputSpec.cc  TestMemBlockIterator.cc  TestMemoryBlock.cc  TestMemoryPool.cc  TestMerger.cc  TestPartitionBucket.cc  TestReadBuffer.cc  TestTotalOrderPartitioner.cc
src/main/native/test/util/: TestChecksum.cc
src/test/resources/: test-bzip2-compress-conf.xml  test-default-compress-conf.xml
src/test/system/conf/: common_conf.xml  kvtest-conf.xml  (+2 more)
(+237 files in other folders)
